# ai-quant-okx

./: .env.example  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: CODE_OVERVIEW.md
okx_quant_bot/: __init__.py  ai_reviewer.py  backtest.py  cli.py  config.py  doctor.py  intelligence.py  models.py  momentum.py  momentum_runner.py  notify.py  report.py  risk.py  runner.py  trade_review.py  training.py
okx_quant_bot/data/: __init__.py  storage.py
okx_quant_bot/exchange/: __init__.py  okx.py  websocket.py
okx_quant_bot/strategy/: __init__.py  indicators.py  trend_pullback.py
systemd/: okx-quant-bot.service
tests/: test_ai_reviewer.py  test_backtest_storage.py  test_config.py  test_doctor.py  test_indicators.py  test_intelligence.py  test_momentum.py  test_momentum_runner.py  test_notify_controls.py  test_okx_client.py  test_strategy_risk.py  test_telegram_messages.py  test_trade_review.py  test_training.py
