[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okx-quant-bot"
version = "0.1.0"
description = "OKX demo-trading cryptocurrency quant bot for BTC/ETH spot workflows."
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
websocket = ["websockets>=12.0"]
test = []

[project.scripts]
okx-quant-bot = "okx_quant_bot.cli:main"

[tool.setuptools.packages.find]
include = ["okx_quant_bot*"]

